<resources>
    <string name="app_name">HiHlo</string>
    <string name="name_digit">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="name_number_digit">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>
    <string name="company_name_digit">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ.,0123456789</string>
    <string name="email_digit">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.0123456789</string>
    <string name="mobile_digit">0123456789</string>

    <string name="default_web_client_id">810492134429-729kklruqrrgvnjgdr1or7ie9031nt5m.apps.googleusercontent.com</string>

    <string name="network_error_please_again_try_later">Network Error. Please Try Again</string>
    <string name="connection_lost_please_again_try_later">Connection Lost. Please Try Again</string>
    <string name="server_error_please_try_again_later">Server Error. Please Try Again</string>
    <string name="something_went_wrong_please_retry">Something went wrong please retry</string>
    <string name="gps_enable">GPS Enable</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="please_open_your_phone_setting_and_enable_your_location">Please open your phone setting and enable your location</string>
    <string name="our_apps_core_functionality_are_based_on_these_permissions">Our apps core functionality are based on these permissions</string>
    <string name="setting">Setting</string>
    <string name="need_location_permission">Our apps core functionality are based on Location permissions. Please open your phone setting and enable your location and give location permission</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_your_profile_picture">Change your profile picture</string>
    <string name="user_name">User Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="welcome_to_hihlo">Welcome to HiHlo</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_passowrd">Enter Your Password</string>
    <string name="i_agree_to_terms_amp_conditions_and_privacy_policy_of_the_app"><![CDATA[I agree to Terms & Conditions and Privacy Policy of the App]]></string>
    <string name="or_with">Or With</string>
    <string name="login_with_google">Login with Google</string>
    <string name="your_email">Your Email</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="you_need_to_unable_the_camera_permission_from_settings">You need to enable the Camera permission from settings to make a call!</string>
    <string name="you_need_to_unable_the_notification_permission_from_settings">You need to enable Notification permission from settings to make a call!</string>
    <string name="you_need_to_unable_the_microphone_permission_from_settings">You need to enable Microphone permission from settings to make a call!</string>
    <string name="choose_photos_that_capture_your_personality_and_the_things_you_love_to_do">Choose photos that capture your personality and the things you love to do.</string>
    <string name="submit">Submit</string>
    <string name="some_error_occurred_please_try_again">Some error occurred! Please try again.</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_confirm_new_password">Enter confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="contact_us">Contact Us</string>

    <string name="recording_playing">Recording playing!</string>
    <string name="error_recording_playing">Error playing recording</string>
    <string name="recording_pause">Recording Pause!</string>
    <string name="recording_started">Recording started!</string>
    <string name="failed_to_start_recording">Failed to start recording</string>
    <string name="recording_time_is_too_short">Recording time is too short</string>
    <string name="tap_and_hold_button_to_record_audio">Tap and hold button to record audio.</string>
    <string name="microphone_permission_is_not_granted">Microphone permission is not granted.</string>
    <string name="permission_not_granted">Permissions not granted</string>
    <string name="re_enter_your_password">Re - Enter Your Password</string>
    <string name="please_enter_your_phone_number_for_verification">Please enter your phone number for verification</string>
    <string name="no_recent_chats">No Chat</string>
    <string name="caption">Caption</string>
    <string name="get_started">Get Started</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account ? Sign Up</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
    <string name="create_an_account">Create an account</string>
    <string name="connect_with_your_friends_today">Connect with your friends today!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_sent_a_reset_link_to_your_registered_email_id_enter_4_digit_code_that_mentioned_in_the_email">We sent a reset link to your registered email id enter 4 digit code that mentioned in the email</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="did_not_receive_otp">Didn\'t receive OTP?</string>
    <string name="create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="interest">Interest</string>
    <string name="choose_the_option_that_suits_you_best">Choose the option that suits you best.</string>
    <string name="please_select_your_interest">Please select your interest</string>
    <string name="change_your_password_ensure_it_differs_from_previous_ones_for_security">Change your password. Ensure it differs from previous ones for security</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_user_name">Enter Your Username</string>
    <string name="details">Details</string>
    <string name="enter_your_dob_and_select_your_gender_to_proceed">Enter your DOB and select your Gender to proceed.</string>
    <string name="next">Next</string>
    <string name="select_dob">Select DOB</string>
    <string name="you_must_be_at_least_13_years_old">You must be at least 13 years old</string>
    <string name="please_select_date_of_birth">Please select date of birth</string>
    <string name="add_current_city">Add Current City</string>
    <string name="search">Search...</string>
    <string name="please_select_a_city">Please select a city</string>
    <string name="no_city_found">No City Found!</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="dob">DOB</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="gender">Gender</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="city">City</string>
    <string name="topic">Topic</string>
    <string name="choose_your_interest">Choose your interest</string>
    <string name="bio">Bio</string>
    <string name="it_s_like_what_i_have">It’s like what i have..</string>
    <string name="upload_status">Upload Status</string>


    <string-array name="City">
        <item>Choose</item>
        <item>India</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>