<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.hihlo.ui.signUpToHome.SignUpToHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.signUpToHome.ForgotPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_12"
            android:src="@drawable/back_button_pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_24"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/please_enter_your_email_to_reset_the_password"
            android:textColor="@color/textDescColor"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            style="@style/editTextHeading"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_desc" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/editTextStyle"
            android:digits="@string/email_digit"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.mEmailIdLiveData}"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_password"
            style="@style/buttonStyle"
            android:layout_marginTop="@dimen/dp_56"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>