<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.hihlo.ui.signUpToHome.SignUpToHomeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.signUpToHome.SigninFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_34"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/login_app_logo"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/welcome_to_hihlo"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_24"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                style="@style/editTextHeading"
                android:layout_marginTop="@dimen/dp_32"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                style="@style/editTextStyle"
                android:digits="@string/email_digit"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.mEmailIdLiveData}"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                style="@style/editTextHeading"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/editTextStyle"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.mPasswordLiveData}"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_password_toggle"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_8"
                android:tint="@color/white"
                android:padding="@dimen/dp_8"
                android:elevation="@dimen/dp_2"
                android:src="@drawable/close_eye_2"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@id/et_password"
                app:layout_constraintBottom_toBottomOf="@id/et_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_terms_conditions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:buttonTint="@color/white"
                    android:checked="@={viewModel.mTermsCheckedLiveData}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_terms_conditions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="@dimen/dp_12"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="center"
                    android:text="@string/i_agree_to_terms_amp_conditions_and_privacy_policy_of_the_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_14"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cb_terms_conditions"
                    app:layout_constraintTop_toTopOf="@id/cb_terms_conditions" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/cl_terms_conditions" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_8"
                android:fontFamily="@font/manrope_semibold"
                android:padding="@dimen/dp_8"
                android:text="@string/forgot_password"
                android:textColor="@color/theme"
                android:textSize="@dimen/dp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_or_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/or_with"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_18"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_google_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_24"
                android:background="@drawable/background_login_edittext"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_or_with">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_google"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/dp_12"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_semibold"
                    android:text="@string/login_with_google"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_google"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_do_not_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/manrope_semibold"
                android:padding="@dimen/dp_8"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/cl_google_login" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_16" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
