<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.hihlo.ui.profile.view_model.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.signUpToHome.NewPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_12"
            android:src="@drawable/back_button_pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_24"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_change_password_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/change_your_password_ensure_it_differs_from_previous_ones_for_security"
            android:textColor="@color/textDescColor"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_change_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_old_password"
            style="@style/editTextHeading"
            android:text="@string/old_password"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_change_password_desc" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_old_password"
            style="@style/editTextStyle"
            android:hint="@string/enter_old_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@={viewModel.mOldPasswordLiveData}"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_old_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_old_password_toggle"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_8"
            android:elevation="@dimen/dp_2"
            android:padding="@dimen/dp_8"
            android:src="@drawable/close_eye_2"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/et_old_password"
            app:layout_constraintEnd_toEndOf="@id/et_old_password"
            app:layout_constraintTop_toTopOf="@id/et_old_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_new_password"
            style="@style/editTextHeading"
            android:text="@string/new_password"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/et_old_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_new_password"
            style="@style/editTextStyle"
            android:hint="@string/enter_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@={viewModel.mNewPasswordLiveData}"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_new_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_new_password_toggle"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_8"
            android:elevation="@dimen/dp_2"
            android:padding="@dimen/dp_8"
            android:src="@drawable/close_eye_2"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/et_new_password"
            app:layout_constraintEnd_toEndOf="@id/et_new_password"
            app:layout_constraintTop_toTopOf="@id/et_new_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_confirm_password"
            style="@style/editTextHeading"
            android:text="@string/confirm_new_password"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/et_new_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            style="@style/editTextStyle"
            android:hint="@string/enter_confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@={viewModel.mConfirmPasswordLiveData}"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_confirm_password_toggle"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_8"
            android:elevation="@dimen/dp_2"
            android:padding="@dimen/dp_8"
            android:src="@drawable/close_eye_2"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/et_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/et_confirm_password"
            app:layout_constraintTop_toTopOf="@id/et_confirm_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            style="@style/buttonStyle"
            android:layout_marginTop="@dimen/dp_56"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>